--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ contourpy==1.3.3
 cycler==0.12.1
 debugpy==1.8.19
 decorator==5.2.1
+et_xmlfile==2.0.0
 executing==2.2.1
 Farama-Notifications==0.0.4
 filelock==3.20.2
@@ -49,6 +50,7 @@ nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.8.90
 opencv-python==4.11.0.86
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
 parso==0.8.5
@@ -71,6 +73,7 @@ pyzmq==27.1.0
 seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
+stable_baselines3==2.7.1
 stack-data==0.6.3
 swig==4.4.1
 sympy==1.14.0
